--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="es">
 
     <head>
 
+        <meta charset="UTF-8">
+        
         <title>Blog Epico</title>
 
     </head>
@@ -14,7 +16,7 @@
 
         <footer>
 
-            
+
 
         </footer>
 
