Se agregó un div, lenguaje y otras correcciones de código

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
 
         <meta charset="UTF-8">
-        
+
         <title>Blog Epico</title>
 
     </head>
@@ -13,6 +13,14 @@
     <body>
 
         <h1>Bienvenido al BLOG EPICO</h1>
+
+        <div>
+
+            <p>Hola, soy un div xd</p>
+
+        </div>
+
+        
 
         <footer>
 
