--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <footer>
 
-
+            <img src="https://i.imgur.com/Coddnhe.gif" title="source: imgur.com" />
 
         </footer>
 
