Agregada referencia de los documentos de CSS y JS

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
 
         <meta charset="UTF-8">
-
+        <link rel="stylesheet" href="CSS/Estilo.css">
         <title>Blog Epico</title>
 
     </head>
@@ -28,6 +28,8 @@
 
         </footer>
 
+        <script src="Scripts/Scripts.js"></script>
+        
     </body>
 
 </html>
