Creación de un navboard en el body de la página

--- a/index.html
+++ b/index.html
@@ -12,21 +12,22 @@
 
     <body>
 
-        <h1>Bienvenido al BLOG EPICO</h1>
+        <nav>
 
-        <div>
+            <div class="logo">
+                <img src="" alt="">
+            </div>
 
-            <p>Hola, soy un div xd</p>
+            <div class="nav_options">
 
-        </div>
+                <ul>
+                    <li><a href="#">Ali</a></li>
+                    <li><a href="#">Bombo</a></li>
+                </ul>
 
-        
+            </div>
 
-        <footer>
-
-            <img src="https://i.imgur.com/Coddnhe.gif" title="source: imgur.com" />
-
-        </footer>
+        </nav>
 
         <script src="Scripts/Scripts.js"></script>
         
