Agregado un logo, cambios en el navboard, agregado un background y la palabra Perron, centrada en la página

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
 
             <div class="logo">
-                <img src="" alt="">
+                <img src="https://i.imgur.com/ZfUQhcY.png" alt="Epico">
             </div>
 
             <div class="nav_options">
@@ -28,6 +28,12 @@
             </div>
 
         </nav>
+
+        <div class="main_section">
+
+            <h1>Perron</h1>
+
+        </div>
 
         <script src="Scripts/Scripts.js"></script>
         
