Adaptación completa de la página a estilo de BuyBook

--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
         <nav>
 
             <div class="logo">
-                <img src="https://i.imgur.com/ZfUQhcY.png" alt="Epico">
+                <img src="https://i.imgur.com/nZHtpjI.png" alt="" width="78" height="56">
             </div>
 
             <div class="nav_options">
 
                 <ul>
-                    <li><a href="#">Ali</a></li>
-                    <li><a href="#">Bombo</a></li>
+                    <li><a href="#">Sobre Nosotros</a></li>
+                    <li><a href="#">Catálogo</a></li>
+                    <li><a href="#">Reseñas</a></li>
                 </ul>
 
             </div>
