Agregados div de mision y vision

--- a/index.html
+++ b/index.html
@@ -32,7 +32,27 @@
 
         <div class="main_section">
 
-            <h1>Perron</h1>
+            <h2>"Nos inspira saber el efecto positivo que puede tener un libro en una persona"</h2>
+
+        </div>
+
+        <div class="valores">
+
+            <div class="quienes_somos">
+
+                
+            </div>
+
+            <div class="mision">
+
+
+            </div>
+
+            <div class="vision">
+
+
+            </div>
+
 
         </div>
 
