Actualización, la página ahora tiene un diseño responsive

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
         <meta charset="UTF-8">
         <link rel="stylesheet" href="CSS/Estilo.css">
+        <link rel="stylesheet" href="CSS/normalize.css">
+        <link rel="stylesheet" href="CSS/mobile.css">
         <title>Blog Epico</title>
 
     </head>
