Agregadas animaciones al proyecto

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
         <link rel="stylesheet" href="CSS/Estilo.css">
         <link rel="stylesheet" href="CSS/normalize.css">
         <link rel="stylesheet" href="CSS/mobile.css">
+        <link rel="stylesheet" href="CSS/animation.css">
         <title>Blog Epico</title>
 
     </head>
 
     <body>
 
-        <nav>
+        <nav class="fadeInDown">
 
             <div class="logo">
                 <img src="https://i.imgur.com/nZHtpjI.png" alt="" width="78" height="56">
