--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <head>
 
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="CSS/grid.css">
         <link rel="stylesheet" href="CSS/Estilo.css">
         <link rel="stylesheet" href="CSS/normalize.css">
         <link rel="stylesheet" href="CSS/mobile.css">
@@ -18,14 +19,14 @@
         <nav class="fadeInDown">
 
             <div class="logo">
-                <img src="https://i.imgur.com/nZHtpjI.png" alt="" width="78" height="56">
+                <a href="index.html"><img src="https://i.imgur.com/nZHtpjI.png" alt="" width="78" height="56"></a>
             </div>
 
             <div class="nav_options">
 
                 <ul>
                     <li><a href="#">Sobre Nosotros</a></li>
-                    <li><a href="#">Catálogo</a></li>
+                    <li><a href="catalogo.html">Catálogo</a></li>
                     <li><a href="#">Reseñas</a></li>
                 </ul>
 
@@ -71,6 +72,12 @@
             </div>
 
         </div>
+
+        <footer>
+
+            <p class="derechos">Copyright 2019 - 2021, todos los derechos reservados</p>
+
+        </footer>
 
         <script src="Scripts/Scripts.js"></script>
         
