--- a/catalogo.html
+++ b/catalogo.html
@@ -36,15 +36,54 @@
 
         <div class="container">
 
-            <h1>Catálogo</h1>
+            <h1>CATÁLOGO</h1>
 
             <div class="row">
 
-                <div class="col-1">YUp</div>
-                <div class="col-2">yo</div>
-                <div class="col-3">ed</div>
-                <div class="col-4">juas</div>
-                <div class="col-5">pum</div>
+                <div class="col-1">
+
+                    <img src="https://i.imgur.com/2jQ9OD4.png" alt="" width="128" height="171">
+                    <h3>Entrevista con el vampiro</h3>
+                    <p>Anne Rice</p>
+                    <button>COMPRAR</button>
+
+                </div>
+
+                <div class="col-2">
+
+                    <img src="https://i.imgur.com/uz6UgUh.png" alt="" width="128" height="171">
+                    <h3>Apostillas a el Nombre de la Rosa</h3>
+                    <p>Umberto Eco</p>
+                    <button>COMPRAR</button>
+
+                </div>
+
+                <div class="col-3">
+
+                    <img src="https://i.imgur.com/vmrEPd1.png" alt="" width="128" height="171">
+                    <h3>Sombra Nocturna</h3>
+                    <p>Andrea Cremer</p>
+                    <button>COMPRAR</button>
+
+                </div>
+
+                <div class="col-4">
+
+                    <img src="https://i.imgur.com/J44QWZy.png" alt="" width="128" height="171">
+                    <h3>El Señor de los Anillos 3</h3>
+                    <p>JRR Tolkien</p>
+                    <button>COMPRAR</button>
+
+                </div>
+
+                <div class="col-5">
+
+                    <img src="https://i.imgur.com/BGRqSV7.png" alt="" width="128" height="171">
+                    <h3>Hannibal</h3>
+                    <p>Thomas Harris</p>
+                    <button>COMPRAR</button>
+
+                </div>
                 
             </div>
 
