--- a/catalogo.html
+++ b/catalogo.html
@@ -45,7 +45,7 @@
                     <img src="https://i.imgur.com/2jQ9OD4.png" alt="" width="128" height="171">
                     <h3>Entrevista con el vampiro</h3>
                     <p>Anne Rice</p>
-                    <button>COMPRAR</button>
+                    <a href="Compra.html"><button>COMPRAR</button></a>
 
                 </div>
 
@@ -54,7 +54,7 @@
                     <img src="https://i.imgur.com/uz6UgUh.png" alt="" width="128" height="171">
                     <h3>Apostillas a el Nombre de la Rosa</h3>
                     <p>Umberto Eco</p>
-                    <button>COMPRAR</button>
+                    <a href="Compra.html"><button>COMPRAR</button></a>
 
                 </div>
 
@@ -63,7 +63,7 @@
                     <img src="https://i.imgur.com/vmrEPd1.png" alt="" width="128" height="171">
                     <h3>Sombra Nocturna</h3>
                     <p>Andrea Cremer</p>
-                    <button>COMPRAR</button>
+                    <a href="Compra.html"><button>COMPRAR</button></a>
 
                 </div>
 
@@ -72,7 +72,7 @@
                     <img src="https://i.imgur.com/J44QWZy.png" alt="" width="128" height="171">
                     <h3>El Señor de los Anillos 3</h3>
                     <p>JRR Tolkien</p>
-                    <button>COMPRAR</button>
+                    <a href="Compra.html"><button>COMPRAR</button></a>
 
                 </div>
 
@@ -81,7 +81,7 @@
                     <img src="https://i.imgur.com/BGRqSV7.png" alt="" width="128" height="171">
                     <h3>Hannibal</h3>
                     <p>Thomas Harris</p>
-                    <button>COMPRAR</button>
+                    <a href="Compra.html"><button>COMPRAR</button></a>
 
                 </div>
                 
