--- a/Compra.html
+++ b/Compra.html
@@ -2,67 +2,76 @@
 
 <html lang="es">
 
-    <head>
+<head>
 
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="CSS/grid.css">
-        <link rel="stylesheet" href="CSS/Estilo.css">
-        <link rel="stylesheet" href="CSS/normalize.css">
-        <link rel="stylesheet" href="CSS/mobile.css">
-        <link rel="stylesheet" href="CSS/animation.css">
-        <title>Blog Epico</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="CSS/grid.css">
+    <link rel="stylesheet" href="CSS/Estilo.css">
+    <link rel="stylesheet" href="CSS/normalize.css">
+    <link rel="stylesheet" href="CSS/mobile.css">
+    <link rel="stylesheet" href="CSS/animation.css">
+    <title>Blog Epico</title>
 
-    </head>
+</head>
 
-    <body>
+<body>
 
-        <nav class="fadeInDown">
+    <nav class="fadeInDown">
 
-            <div class="logo">
-                <a href="index.html"><img src="https://i.imgur.com/nZHtpjI.png" alt="" width="78" height="56"></a>
-            </div>
+        <div class="logo">
+            <a href="index.html"><img src="https://i.imgur.com/nZHtpjI.png" alt="" width="78" height="56"></a>
+        </div>
 
-            <div class="nav_options">
+        <div class="nav_options">
 
-                <ul>
-                    <li><a href="#">Sobre Nosotros</a></li>
-                    <li><a href="catalogo.html">Catálogo</a></li>
-                    <li><a href="#">Reseñas</a></li>
-                </ul>
-
-            </div>
-
-        </nav>
-
-        <div class="container_compra">
-
-            <div class="row">
-
-                <div class="col-1">
-
-                    HOLA
-
-                </div>
-
-                <div class="col-2">
-
-                    HOLA
-
-                </div>
-
-                
-            </div>
+            <ul>
+                <li><a href="#">Sobre Nosotros</a></li>
+                <li><a href="catalogo.html">Catálogo</a></li>
+                <li><a href="#">Reseñas</a></li>
+            </ul>
 
         </div>
 
-        <footer>
+    </nav>
 
-            <p class="derechos">Copyright 2019 - 2021, todos los derechos reservados</p>
+    <div class="container_compra">
 
-        </footer>
+        <div class="row">
 
-        <script src="Scripts/Scripts.js"></script>
-        
-    </body>
+            <div class="col-1C">
+
+                <div class="pago">
+
+                    <h1>Proceso de compra</h1>
+                    <p>Sigue los pasos a continuación</p>
+
+                </div>
+
+            </div>
+
+            <div class="col-2C">
+
+                <div class="pago">
+
+
+
+                </div>
+
+            </div>
+
+
+        </div>
+
+    </div>
+
+    <footer>
+
+        <p class="derechos">Copyright 2019 - 2021, todos los derechos reservados</p>
+
+    </footer>
+
+    <script src="Scripts/Scripts.js"></script>
+
+</body>
 
 </html>
