Se agregó un módulo de compra a la página web

--- a/Compra.html
+++ b/Compra.html
@@ -42,8 +42,18 @@
 
                 <div class="pago">
 
-                    <h1>Proceso de compra</h1>
-                    <p>Sigue los pasos a continuación</p>
+                    <div class="pago_imagen">
+                        
+                        <img src="https://i.imgur.com/x6dAJUU.png" alt="" width="125px" height="125px">
+
+                    </div>
+                    <div class="pago_texto">
+
+                        <h1>Proceso de compra</h1>
+                        <p>Sigue los pasos a continuación</p>
+
+                    </div>
+                    
 
                 </div>
 
@@ -51,9 +61,25 @@
 
             <div class="col-2C">
 
-                <div class="pago">
+                <div class="pago_texto">
 
+                    <form action="">
 
+                        <label for="Nombre">Nombre</label>
+                        <br>
+                        <input type="text" placeholder="" name="Nombre">
+                        <br>
+
+                        <label for="Email">Email</label>
+                        <br>
+                        <input type="text" placeholder="" name="Email">
+                        <br>
+
+                        <label for="Telefono">Teléfono</label>
+                        <br>
+                        <input type="text" placeholder="" name="Telefono">
+
+                    </form>
 
                 </div>
 
