--- a/Compra.html
+++ b/Compra.html
@@ -65,9 +65,9 @@
 
                     <form action="">
 
-                        <label for="Nombre">Nombre</label>
+                        <label for="name">Nombre</label>
                         <br>
-                        <input type="text" placeholder="" name="Nombre">
+                        <input type="text" placeholder="" name="name">
                         <br>
 
                         <label for="Email">Email</label>
@@ -75,9 +75,9 @@
                         <input type="text" placeholder="" name="Email">
                         <br>
 
-                        <label for="Telefono">Teléfono</label>
+                        <label for="Phone">Teléfono</label>
                         <br>
-                        <input type="text" placeholder="" name="Telefono">
+                        <input type="text" placeholder="" name="Phone">
 
                     </form>
 
