Correciones al estilo de la página

--- a/catalogo.html
+++ b/catalogo.html
@@ -25,7 +25,6 @@
             <div class="nav_options">
 
                 <ul>
-                    <li><a href="#">Sobre Nosotros</a></li>
                     <li><a href="#">Catálogo</a></li>
                     <li><a href="#">Reseñas</a></li>
                 </ul>
@@ -45,7 +44,7 @@
                     <img src="https://i.imgur.com/2jQ9OD4.png" alt="" width="128" height="171">
                     <h3>Entrevista con el vampiro</h3>
                     <p>Anne Rice</p>
-                    <a href="Compra.html"><button>COMPRAR</button></a>
+                    <a href="Compra.html"><button class="boton_general">COMPRAR</button></a>
 
                 </div>
 
@@ -54,7 +53,7 @@
                     <img src="https://i.imgur.com/uz6UgUh.png" alt="" width="128" height="171">
                     <h3>Apostillas a el Nombre de la Rosa</h3>
                     <p>Umberto Eco</p>
-                    <a href="Compra.html"><button>COMPRAR</button></a>
+                    <a href="Compra.html"><button class="boton_general">COMPRAR</button></a>
 
                 </div>
 
@@ -63,7 +62,7 @@
                     <img src="https://i.imgur.com/vmrEPd1.png" alt="" width="128" height="171">
                     <h3>Sombra Nocturna</h3>
                     <p>Andrea Cremer</p>
-                    <a href="Compra.html"><button>COMPRAR</button></a>
+                    <a href="Compra.html"><button class="boton_general">COMPRAR</button></a>
 
                 </div>
 
@@ -72,7 +71,7 @@
                     <img src="https://i.imgur.com/J44QWZy.png" alt="" width="128" height="171">
                     <h3>El Señor de los Anillos 3</h3>
                     <p>JRR Tolkien</p>
-                    <a href="Compra.html"><button>COMPRAR</button></a>
+                    <a href="Compra.html"><button class="boton_general">COMPRAR</button></a>
 
                 </div>
 
@@ -81,7 +80,7 @@
                     <img src="https://i.imgur.com/BGRqSV7.png" alt="" width="128" height="171">
                     <h3>Hannibal</h3>
                     <p>Thomas Harris</p>
-                    <a href="Compra.html"><button>COMPRAR</button></a>
+                    <a href="Compra.html"><button class="boton_general">COMPRAR</button></a>
 
                 </div>
                 
