--- a/Compra.html
+++ b/Compra.html
@@ -25,7 +25,6 @@
         <div class="nav_options">
 
             <ul>
-                <li><a href="#">Sobre Nosotros</a></li>
                 <li><a href="catalogo.html">Catálogo</a></li>
                 <li><a href="#">Reseñas</a></li>
             </ul>
@@ -67,17 +66,20 @@
 
                         <label for="name">Nombre</label>
                         <br>
-                        <input type="text" placeholder="" name="name">
+                        <input class="pago_texto_input" type="text" placeholder="" name="name">
                         <br>
 
                         <label for="Email">Email</label>
                         <br>
-                        <input type="text" placeholder="" name="Email">
+                        <input class="pago_texto_input" type="text" placeholder="" name="Email">
                         <br>
 
                         <label for="Phone">Teléfono</label>
                         <br>
-                        <input type="text" placeholder="" name="Phone">
+                        <input class="pago_texto_input" type="text" placeholder="" name="Phone">
+                        <br>
+
+                        <input class="boton_general" type="submit" placeholder="Enviar"> 
 
                     </form>
 
