Se agregó un botón de PayPal a la página web

--- a/Compra.html
+++ b/Compra.html
@@ -62,7 +62,7 @@
 
                 <div class="pago_texto">
 
-                    <form action="">
+                    <form action="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=HD3A38YN54VX8" method="POST">
 
                         <label for="name">Nombre</label>
                         <br>
@@ -74,9 +74,9 @@
                         <input class="pago_texto_input" type="text" placeholder="" name="Email">
                         <br>
 
-                        <label for="Phone">Teléfono</label>
+                        <label for="phone">Teléfono</label>
                         <br>
-                        <input class="pago_texto_input" type="text" placeholder="" name="Phone">
+                        <input class="pago_texto_input" type="text" placeholder="" name="phone">
                         <br>
 
                         <input class="boton_general" type="submit" placeholder="Enviar"> 
