--- a/catalogo.html
+++ b/catalogo.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="es">
+<html lang="en">
 
     <head>
 
@@ -25,8 +25,8 @@
             <div class="nav_options">
 
                 <ul>
-                    <li><a href="#">Catálogo</a></li>
-                    <li><a href="#">Reseñas</a></li>
+                    <li><a href="#">Catalogo</a></li>
+                    <li><a href="#">Reseñias</a></li>
                 </ul>
 
             </div>
